Started implementing the graph version of the tile map using gdx.AI

--- a/Code/build.gradle
+++ b/Code/build.gradle
@@ -33,6 +33,7 @@ project(":desktop") {
         compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
+        compile "com.badlogicgames.gdx:gdx-ai:1.6.0"
     }
 }
 
@@ -44,6 +45,7 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "net.onedaybeard.artemis:artemis-odb:1.2.1"
+        compile "com.badlogicgames.gdx:gdx-ai:1.6.0"
     }
 }
 
